# kable-python-django-sdk

./: README.md  requirements.txt  setup.cfg
src/kable_python_django/: __init__.py
