[metadata]
name = kable-python-django
version = 2.5.1
author = Kable
author_email = contact@kable.io
description = Kable Python Django SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://kable.io
project_urls =
    Bug Tracker = https://github.com/Kable-io/kable-python-django-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    Django
    requests
    cachetools

[options.packages.find]
where = src
